--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+dependencyLocking {
+    lockAllConfigurations()
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
