--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=demo
+# JWT Configuration
+# 少なくとも32バイト（256ビット）のランダムな値を Base64 でエンコードした文字列
+# 以下は例: openssl rand -base64 32 で生成
+jwt.secret=IyR9XXkySGJAI2RqaGtzbWRqZmhranNkaGZranNoZGZr
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# MyBatis Configuration
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# Security Configuration
+spring.security.filter.order=10
+
+# Server Configuration
+server.servlet.context-path=/api
