--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.security.filter.order=10
 
 # Server Configuration
 server.servlet.context-path=/api
+
+# SpringDoc OpenAPI Configuration
+springdoc.api-docs.path=/doc
+springdoc.swagger-ui.path=/doc/swagger-ui
