--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ server.servlet.context-path=/api
 # SpringDoc OpenAPI Configuration
 springdoc.api-docs.path=/doc
 springdoc.swagger-ui.path=/doc/swagger-ui
+
+# CORS Configuration
+cors.allowed-origins=http://localhost:3000,http://localhost:8080
