--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation 'org.yaml:snakeyaml:2.2'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
