--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ springdoc.swagger-ui.path=/doc/swagger-ui
 
 # CORS Configuration
 cors.allowed-origins=http://localhost:3000,http://localhost:8080
+
+# Logging Configuration
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
