--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
+
+    // CLI parser
+    implementation 'info.picocli:picocli-spring-boot-starter:4.7.6'
+    annotationProcessor 'info.picocli:picocli-codegen:4.7.6'
     implementation 'org.jspecify:jspecify:1.0.0'
     errorprone "com.uber.nullaway:nullaway:0.12.1"
     errorprone 'com.google.errorprone:error_prone_core:2.35.1'
