--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.security.filter.order=10
 
 # Server Configuration
-server.servlet.context-path=/api
+server.servlet.context-path=
 
 # SpringDoc OpenAPI Configuration
 springdoc.api-docs.path=/doc
