Spring session JDBCつこてみるよ

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ cors.allowed-origins=http://localhost:3000,http://localhost:8080
 
 # Logging Configuration
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
+
+server.servlet.session.timeout=30m
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-postgresql.sql
+spring.session.jdbc.table-name=SPRING_SESSION
