SESSIONIDを使った認証に変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-# JWT Configuration
-# 少なくとも32バイト（256ビット）のランダムな値を Base64 でエンコードした文字列
-# 以下は例: openssl rand -base64 32 で生成
-jwt.secret=IyR9XXkySGJAI2RqaGtzbWRqZmhranNkaGZranNoZGZr
-
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
@@ -27,6 +22,7 @@ cors.allowed-origins=http://localhost:3000,http://localhost:8080
 # Logging Configuration
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
 
+# Spring Session Configuration
 server.servlet.session.timeout=30m
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-postgresql.sql
