--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
     id "net.ltgt.errorprone" version "4.1.0"
+    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 import net.ltgt.gradle.errorprone.CheckSeverity
@@ -93,5 +94,11 @@ tasks.withType(JavaCompile) {
     options.errorprone {
         check("NullAway", CheckSeverity.ERROR)
         option("NullAway:AnnotatedPackages", "com.uber")
+    }
+}
+
+spotless {
+    java {
+        eclipse().configFile project.file("spotless.xml")
     }
 }
