--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password=postgres
 # MyBatis Configuration
 mybatis.configuration.map-underscore-to-camel-case=true
 
+# flyway Configuration
+spring.flyway.baseline-on-migrate=true
+
 # Security Configuration
 spring.security.filter.order=10
 
