--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ subprojects {
         implementation 'org.flywaydb:flyway-core'
         implementation 'org.flywaydb:flyway-database-postgresql'
         implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-        runtimeOnly 'org.postgresql:postgresql'
+        runtimeOnly 'org.postgresql:postgresql:42.7.4'
 
         // Generating OpenAPI document
         implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
