--- a/build.gradle
+++ b/build.gradle
@@ -49,23 +49,17 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-security'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
         implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.session:spring-session-jdbc'
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
         implementation 'org.springframework.session:spring-session-core'
+        implementation 'org.springframework.session:spring-session-jdbc'
 
         // DB
         implementation 'org.flywaydb:flyway-core'
         implementation 'org.flywaydb:flyway-database-postgresql'
-        implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-        runtimeOnly 'org.postgresql:postgresql:42.7.4'
+        runtimeOnly 'org.postgresql:postgresql'
 
         // Generating OpenAPI document
         implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-
-        // JWT
-        implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
-        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
-        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
         // Logging
         implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
@@ -83,7 +77,6 @@ subprojects {
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.springframework.boot:spring-boot-testcontainers'
         testImplementation 'org.springframework.security:spring-security-test'
-        testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
         testImplementation 'org.testcontainers:junit-jupiter'
         testImplementation 'org.testcontainers:postgresql'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
