--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,9 @@ subprojects {
         // Logging
         implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 
+        // UUID
+        implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
+
         // Null safety
         implementation 'org.jspecify:jspecify:1.0.0'
         errorprone "com.uber.nullaway:nullaway:0.12.1"
